演示代码完成，控制器bug修复